# mit-hardmode

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: settings.py
scripts/: setup.sh  test_dc_motor.py  test_display.py  test_mic.py  test_servo.py  test_vibe.py
src/: main.py
src/audio/: classifier.py  microphone.py
src/camera/: ai_camera.py
src/display/: oled.py
src/inference/: hailo.py
src/llm/: client.py
src/motor/: stepper.py
src/servo/: motor.py
tests/: test_audio.py  test_display.py  test_llm.py
